# core-solver

./: .pre-commit-config.yaml  pyproject.toml
core_solver/: main.py  solver.py  top_sort.py
