[tool.poetry]
name = "core-solver"
version = "0.1.0"
description = ""
authors = ["Pentra <Pentracillin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ortools = "^9.7.2996"
pandas = "^2.1.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
solver = "core_solver.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
